--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: diabetes-classifier
     env: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn mysite.wsgi:application"
+    startCommand: "gunicorn diabetes_classifier.wsgi"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
